--- a/S10_NETCOREWeb.Domain/S10_NETCOREWeb.Domain.csproj
+++ b/S10_NETCOREWeb.Domain/S10_NETCOREWeb.Domain.csproj
@@ -5,12 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Core\DTOs\" />
     <Folder Include="Core\Services\" />
-    <Folder Include="Infrastructure\Mappings\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.6">
       <PrivateAssets>all</PrivateAssets>
